<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--     TODO: 更改群头像-->
    <RelativeLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/image1"
            android:text="@string/google"
            android:textColor="@color/black"
            android:textSize="45px" />

        <TextView
            android:id="@+id/time1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="190dp"
            android:layout_toRightOf="@id/name1"
            android:text="@string/time_yes"
            android:textSize="45px" />

        <ImageView
            android:id="@+id/image1"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:src="@mipmap/favicon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_v1"
            android:layout_below="@id/name1"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/image1"
            android:text="@string/three"
            android:textSize="45px" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="340dp"
        android:layout_height="1dp"
        android:layout_below="@id/layout1"
        android:layout_marginLeft="50dp"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#666666"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout1">

        <TextView
            android:id="@+id/name2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/image2"
            android:text="@string/wan_da"
            android:textColor="@color/black"
            android:textSize="45px" />

        <TextView
            android:id="@+id/time2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="190dp"
            android:layout_toRightOf="@id/name2"
            android:text="@string/time_yes"
            android:textSize="45px" />

        <ImageView
            android:id="@+id/image2"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:src="@mipmap/favicon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name2"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/image2"
            android:text="@string/wang_master"
            android:textSize="45px" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="340dp"
        android:layout_height="1dp"
        android:layout_below="@id/layout2"
        android:layout_marginLeft="50dp"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#666666"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout2">

        <TextView
            android:id="@+id/name3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/image3"
            android:text="@string/five_zero_nine"
            android:textColor="@color/black"
            android:textSize="45px" />

        <TextView
            android:id="@+id/time3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="205dp"
            android:layout_toRightOf="@id/name3"
            android:text="@string/time_10"
            android:textSize="45px" />

        <ImageView
            android:id="@+id/image3"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:src="@mipmap/favicon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name3"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/image3"
            android:text="@string/aka"
            android:textSize="45px" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="340dp"
        android:layout_height="1dp"
        android:layout_below="@id/layout3"
        android:layout_marginLeft="50dp"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#666666"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout3">

        <TextView
            android:id="@+id/name4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/image4"
            android:text="@string/beiJing"
            android:textColor="@color/black"
            android:textSize="45px" />

        <TextView
            android:id="@+id/time4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="185dp"
            android:layout_toRightOf="@id/name4"
            android:text="@string/time_8"
            android:textSize="45px" />

        <ImageView
            android:id="@+id/image4"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:src="@mipmap/favicon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name4"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/image4"
            android:text="@string/li_three"
            android:textSize="45px" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="340dp"
        android:layout_height="1dp"
        android:layout_below="@id/layout4"
        android:layout_marginLeft="50dp"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#666666"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout4">

        <TextView
            android:id="@+id/name5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/image5"
            android:text="@string/xu_li_ya"
            android:textColor="@color/black"
            android:textSize="45px" />

        <TextView
            android:id="@+id/time5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="185dp"
            android:layout_toRightOf="@id/name5"
            android:text="@string/time_23"
            android:textSize="45px" />

        <ImageView
            android:id="@+id/image5"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:src="@mipmap/favicon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name5"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/image5"
            android:text="@string/er_ge"
            android:textSize="45px" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="340dp"
        android:layout_height="1dp"
        android:layout_below="@id/layout5"
        android:layout_marginLeft="50dp"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#666666"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout5">

        <TextView
            android:id="@+id/name6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/image6"
            android:text="@string/tai"
            android:textColor="@color/black"
            android:textSize="45px" />

        <TextView
            android:id="@+id/time6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="250dp"
            android:layout_toRightOf="@id/name6"
            android:text="@string/time_20"
            android:textSize="45px" />

        <ImageView
            android:id="@+id/image6"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:src="@mipmap/favicon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name6"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/image6"
            android:text="@string/Robin"
            android:textSize="45px" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="340dp"
        android:layout_height="1dp"
        android:layout_below="@id/layout6"
        android:layout_marginLeft="50dp"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#666666"
            />
    </RelativeLayout>

</RelativeLayout>